--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
       - name: Execute Gradle build
-        run: ./gradlew clean build jar check jacocoTestCoverageVerification
+        run: ./gradlew clean build jar check -PossrhUsername="" -PossrhPassword=""
       - uses: actions/upload-artifact@v3
         with:
           name: Package
