--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,12 @@
 name: Java CI
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - '*'
+  pull_request:
+    branches:
+      - master
 
 jobs:
   build:
@@ -8,15 +14,19 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
           distribution: temurin
           java-version: 11
+
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
+
       - name: Execute Gradle build
         run: ./gradlew clean build jar check -PossrhUsername="" -PossrhPassword=""
+
       - uses: actions/upload-artifact@v3
         with:
           name: Package
